# platelet-pooling-simulator_draft

./: .gitignore  .pylintrc  ARCHITECTURE_FLOW_ANALYSIS.md  AZURE_INTEGRATION_COMPLETE.md  AZURE_INTEGRATION_README.md  AZURE_INTEGRATION_START_HERE.md  AZURE_INTEGRATION_SUMMARY.md  END_TO_END_GUIDE.md  FIXES_SUMMARY.md  HOW_TO_CHECK_8_CAPABILITIES.md  HOW_TO_CHECK_CODE.md  HOW_TO_RUN.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  INDEX_UI_API_AZURE.md  PROBLEM_STATEMENT_README.md  QUICK_ANSWER_UI_FLOW.md  QUICK_CHECK.md  QUICK_SETUP_UI_API_AZURE.md  QUICK_START.md  QUICK_START_GUIDE.md  QUICK_TEST.md  README.md  README_ARCHITECTURE.txt  README_CHECK_CODE.txt  START_HERE.md  TESTING_GUIDE.md  UI_API_AZURE_INTEGRATION.md  UI_CHANGES.md  analyze_flows.py  capacity_multiplier.py  check_db.py  check_processing_status.py  default_config.json  deploy_azure.sh  explain_staff_utilization.py  mypy.ini  pyproject.toml  requirements-azure.txt  requirements.txt  (+14 more)
api/: .gitignore  __init__.py  main.py  models.py  requirements.txt  templates.py
azure_functions/: requirements.txt
azure_integration/: README.md  __init__.py  digital_twins_client.py  telemetry_streamer.py
docs/: AZURE_SETUP_GUIDE.md  README.md
examples/: ARCHITECTURE.md  BOTTLENECK_ANALYSIS_EXPLAINED.md  CAPACITY_TESTING_GUIDE.md  CODE_REVIEW_ASSESSMENT.md  HOW_TO_RUN_IN_UI.md  HOW_TO_TEST.md  KPI_EXPORT_README.md  README-WEB-UI.md  THE_REAL_PROBLEM.md  UNIVERSAL-OFFSET-IMPLEMENTATION.md  analyze_utilization.py  automated_bottleneck_test.py  bottleneck_analysis.py  bottleneck_analysis_results.json  demo.py  (+48 more)
(+91 files in other folders)
